--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.3.3",
+    "lodash.isequal": "^4.5.0",
     "mongodb": "^4.1.1",
     "next": "latest",
     "next-iron-session": "^4.2.0",
